appId: com.sofibaby.app
name: Toggle Theme Setting

tags:
  - regression
  - settings

---
- runFlow: ../../helpers/setup-with-baby.yaml
- tapOn:
    id: "settings-button"
- scrollUntilVisible:
    element:
      id: "theme-setting"
    direction: DOWN
- tapOn:
    id: "theme-setting"
- tapOn:
    id: "theme-dark"
- assertVisible:
    text: "Currently using dark mode"
